fix moblie responsiveness on mobile view

--- a/src/app/phrases-keyboard/phrases-keyboard.component.scss
+++ b/src/app/phrases-keyboard/phrases-keyboard.component.scss
@@ -1,25 +1,31 @@
-::selection{background-color:none; color:inherit;}
-
-.keyboard{
-  width:800px; height: 320px;
-  margin: 0px auto;
-  border-radius: 9px;
-  padding: 30px;
-  color: rgb(92, 89, 89);
+::selection {
+    background-color: none;
+    color: inherit;
 }
 
-.key{
-  width: 40px; height:40px;
-  display:block;
-  background-color:rgba(0,0,0,.1);;
-  text-align: left;
-  padding-left: 8px;
-  line-height: 29px;
-  border-radius:2px;
-  float:left; margin-left: 2px;
-  margin-bottom:2px;
-  cursor: pointer;
-  transition: box-shadow 0.7s ease;
+.keyboard {
+    width: 800px;
+    height: 320px;
+    margin: 0px auto;
+    border-radius: 9px;
+    padding: 30px;
+    color: rgb(92, 89, 89);
+}
+
+.key {
+    width: 40px;
+    height: 40px;
+    display: block;
+    background-color: rgba(0, 0, 0, .1);
+    text-align: left;
+    padding-left: 8px;
+    line-height: 29px;
+    border-radius: 2px;
+    float: left;
+    margin-left: 2px;
+    margin-bottom: 2px;
+    cursor: pointer;
+    transition: box-shadow 0.7s ease;
 }
 
 input {
@@ -32,34 +38,84 @@ input {
     text-align: center;
 }
 
-.yes{
-    color:rgb(12, 204, 12);
+.yes {
+    color: rgb(12, 204, 12);
 }
+
 .no {
-    color:red;
+    color: red;
 }
 
-.section-a{width:650px; height:260px; float:left;}
-.section-b{width:150px; height:260px; float:left;}
+.small {
+    font-size: 10px;
+    line-height: 13px;
+    text-align: center;
+    padding: 0 5px;
+    padding-top: 2px;
+    height: 28px !important;
+}
 
-.small{font-size:10px; line-height:13px; text-align: center; padding:0 5px; padding-top:2px; height:28px !important;}
-.space1{margin-right: 43px !important;}
-.space2{margin-right: 25px !important;}
-.dual {font-size: 14px; line-height: 20px; width:30px; }
-.backspace {width:84px; font-size: 12px;}
-.tab {width: 50px; line-height: 40px; font-size:13px;}
-.letter{width:30px;}
-.slash{width:64px;}
-.caps{width:70px; font-size:12px; line-height:18px;}
-.enter{width:92px; line-height:40px; text-align: center; padding-left:0;}
-.shift.left{width: 90px;line-height: 40px; font-size:13px;}
-.shift.right{width: 104px;line-height: 40px; font-size:13px;}
-.ctrl{width: 50px; line-height: 40px; font-size:13px;}
-.space{width:234px;}
-.arrows{position:relative; top:42px;}
-.sec-func .key{width: 32px; font-size:10px; text-align:left; line-height:40px; float:left;}
-.sec-func div.dual{line-height:20px;}
-.arrows .key{text-align: center; padding-left: 7px; margin-left:2px;}
-.hidden{visibility: hidden;}
+.space1 {
+    margin-right: 43px !important;
+}
 
-.key:hover{box-shadow:0px 0px 10px rgb(21, 120, 177); z-index:1000;}
+.backspace {
+    width: 84px;
+    font-size: 12px;
+}
+
+.caps {
+    width: 70px;
+    font-size: 12px;
+    line-height: 18px;
+}
+
+.enter {
+    width: 92px;
+    line-height: 40px;
+    text-align: center;
+    padding-left: 0;
+}
+
+.shift.left {
+    width: 90px;
+    line-height: 40px;
+    font-size: 13px;
+}
+
+.key:hover {
+    box-shadow: 0px 0px 10px rgb(21, 120, 177);
+    z-index: 1000;
+}
+
+button {
+    border: none;
+    background-color: transparent;
+    outline: none;
+    width: 90px;
+    line-height: 40px;
+    font-size: 13px;
+
+}
+
+.images-container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    padding: 30px;
+}
+
+.image-container {
+    position: relative;
+}
+
+@media screen and (max-width:400px) {
+    .images-container {
+        grid-template-columns: auto auto;
+    }
+}
+
+@media screen and (max-width:300px) {
+    .images-container {
+        grid-template-columns: auto;
+    }
+}
